# tep70

./: .gitignore  CMakeLists.txt  README.md  tep70.pro
cfg/trains/: tep70-T65_17.xml  tep70.xml  tep70bs-T65_17.xml  tep70bs.xml
cfg/vehicles/tep70/: motor-compressor.xml  tep70-0132.xml
cfg/vehicles/tep70bs/: displays.xml  motor-compressor.xml  tep70bs-214.xml
data/animations/tep70/: KM_revers.xml  kran395-ruk.xml  ruk_367.xml  sigLight_EDT1.xml  sigLight_fire_R.xml  sigLight_oil_temp.xml  sigLight_pss.xml  sigLight_res_fuelpump.xml  sigLight_reset_power.xml  sigLight_zhal_ET1.xml  srelka_fuel_press.xml  strelka_bat_voltage.xml  strelka_gen_current.xml  tumbler_edt_on.xml  (+10 more)
docs/: Equipment_placement.txt
klub-display/: CMakeLists.txt  klub-display.pro
msut-display/: CMakeLists.txt  msut-display.pro
scripts/: deploy-tep70.bat  deploy-tep70bs.bat  install.bat
tep70/: CMakeLists.txt  tep70.pro
tep70-equipment/include/: disel.h  electric-fuel-pump.h  electric-oil-pump.h  km-2202.h  sl2m.h  starter-generator.h  trac-generator.h  trac-motor.h
tep70-equipment/src/: alsn-ukbm.cpp  disel.cpp  electric-fuel-pump.cpp  electric-oil-pump.cpp  km-2202.cpp  sl2m.cpp  starter-generator.cpp  tep70-motor-compressor.cpp  tep70-switcher.cpp  trac-generator.cpp
tep70/include/: tep70-signals.h  tep70.h
tep70/src/: tep70-debug-output.cpp  tep70-init-brake-devices.cpp  tep70-init-brakes-control.cpp  tep70-init-brakes-epb.cpp  tep70-init-brakes-equipment.cpp  tep70-init-cabine-controls.cpp  tep70-init-control-circuit.cpp  tep70-init-couplings.cpp  tep70-init-disel.cpp  tep70-init-electro-transmission.cpp  tep70-init-fuel-system.cpp  tep70-init-oil-system.cpp  tep70-init-other.cpp  tep70-init-pneumo-supply.cpp  tep70-init-safety-device.cpp  tep70-init-sounds.cpp  tep70-keyprocess.cpp  tep70-signals.cpp  tep70-step-brakes-control.cpp  tep70-step-brakes-equipment.cpp  tep70-step-couplings.cpp  tep70-step-decode-alsn.cpp  tep70-step-electro-transmission.cpp  tep70-step-other.cpp  tep70-step-pneumo-supply.cpp  tep70-step-safety-device.cpp  tep70-step-sounds.cpp  tep70.cpp
tep70bs/: CMakeLists.txt  tep70bs.pro
tep70bs/include/: tep70bs.h
tep70bs/src/: tep70bs-debug-output.cpp  tep70bs-init-brake-devices.cpp  tep70bs-init-brakes-control.cpp  tep70bs-init-brakes-epb.cpp  tep70bs-init-brakes-equipment.cpp  tep70bs-init-cabine-controls.cpp  tep70bs-init-control-circuit.cpp  tep70bs-init-couplings.cpp  tep70bs-init-disel.cpp  tep70bs-init-electro-transmission.cpp  tep70bs-init-fuel-system.cpp  tep70bs-init-msut.cpp  tep70bs-init-oil-system.cpp  tep70bs-init-other.cpp  tep70bs-init-pneumo-supply.cpp  tep70bs-init-safety-device.cpp  tep70bs-init-sounds.cpp  tep70bs-msut-signals.cpp  tep70bs-signals.cpp  tep70bs-step-brakes-control.cpp  tep70bs-step-brakes-equipment.cpp  tep70bs-step-couplings.cpp  tep70bs-step-electro-transmission.cpp  tep70bs-step-other.cpp  tep70bs-step-pneumo-supply.cpp  tep70bs-step-safety-device.cpp  tep70bs.cpp
(+75 files in other folders)
